2008-10-17  Deepak Bhole  <dbhole@redhat.com>

	* plugin/icedtea/netscape/javascript/JSObject.java: Handle null args to
	call() (bug# 217).

2008-10-17  Matthias Klose  <doko@ubuntu.com>

	* IcedTeaPlugin.cc: Don't use open if's in macros; cache getenv() call.

2008-10-17  Gary Benson  <gbenson@redhat.com>

	PR icedtea/203:
	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.cpp
	(SharkDecacher::start_stack): Always set the stack pointer.
	(SharkCacher::start_stack): Removed.
	* ports/hotspot/src/share/vm/shark/sharkCacheDecache.hpp
	(SharkCacher::start_stack): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::CreateBuildFrame): Only set the stack pointer
	for non-product builds.

2008-10-17  Gary Benson  <gbenson@redhat.com>

	* acinclude.m4 (FIND_LIBGCJ_JAR): Fix quoting.

2008-10-16  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Use fifo pipes instead of tcp/ip, make debug output
	optional, update how security is handled.
	* Makefile.am: Make liveconnect the default plugin
	* configure.ac: Same.
	* icedtea-webstart.patch: Revert to old revision. The new revision was
	never meant to go in.
	* plugin/icedtea/netscape/javascript/JSObject.java: Change println's to
	debug().
	* plugin/icedtea/netscape/javascript/JSRunnable.java: Same.
	* plugin/icedtea/sun/applet/AppletSecurityContextManager.java: Same.
	* plugin/icedtea/sun/applet/GetMemberPluginCallRequest.java: Same.
	* plugin/icedtea/sun/applet/GetWindowPluginCallRequest.java: Same.
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Same, and
	add some time calculation output to guage performance.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Update panel resizing
	code, centralize debug output calls.
	* plugin/icedtea/sun/applet/PluginDebug.java: Make debug output based on
	environment variable "ICEDTEAPLUGIN_DEBUG".
	* plugin/icedtea/sun/applet/PluginMain.java: Update to make use of fifo. Make 